adjusted page-wide spacing; fixed gotop size

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,7 +25,6 @@ body {
 }
 
 .landing {
-    top:0%;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
@@ -36,6 +35,7 @@ body {
 
 .landingcont {
     height:100%;
+    margin-top: 10vh;
 }
 
 @media only screen and (max-width: 320px) {
@@ -115,7 +115,7 @@ body {
     background-color: rgba(42, 60, 82, 1);
     box-shadow: inset 0 1em 1em -1em black;
     /*border-top: rgb(214,214,214) 12px solid;*/
-    border-bottom: rgb(37, 38, 44) 10px solid;
+    border-bottom: rgb(37, 38, 44) 5px solid;
 }
 
 .suave {
@@ -154,11 +154,11 @@ body {
 .single_trait {
     /*background-color: white;*/
     text-align: center;
-    padding:0px;
+    padding: 20px;
 }
 
 .single_trait img {
-    width:70%;
+    max-width: 80%;
     opacity: 1;
 }
 
@@ -179,7 +179,7 @@ body {
     color: #e91e63;
     /* border-top: rgb(74, 77, 80) solid 10px; */
     /* box-shadow: 0 20px 20px -20px black; */
-    border-bottom: rgb(180, 180, 180) solid 10px;
+    border-bottom: rgb(220, 220, 220) solid 5px;
 }
 
 
@@ -268,14 +268,13 @@ body {
 #gotop {
     display: none;
     position: fixed;
-    width: 4%;
-    height:0;
-    opacity: 0.2;
+    width: 4vmax;
+    height: 4vmax;
+    opacity: 0.3;
     right: 20px;
     bottom: 20px;
     background-color: #90a4ae;
     cursor: pointer;
-    padding-bottom: 4%;
     -moz-border-radius: 4%; 
     -webkit-border-radius: 4%; 
     border-radius: 100%;
